# file-system-interview-problem

backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/worker_daemon_backend/: config.py  server.py  tool_server.py
frontend/: .gitignore  index.html  package.json  tailwind.config.js  test-utils.tsx
frontend/patches/: cmdk+1.0.0.patch
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/api_codegen/temp/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/assets/icons/: github-logo-blue.tsx  knowledge.tsx  secrets.tsx
frontend/src/components/: CodeEditor.tsx  FolderIcon.tsx
frontend/src/components/file-explorer/: ExplorerActions.tsx  ExplorerTree.tsx  FileExplorer.tsx  TreeNode.tsx
frontend/src/components/ui/: Loading.tsx
frontend/src/i18n/: translation.json
frontend/src/services/: api.ts  fileService.ts  options.ts  session.ts
frontend/src/state/: codeSlice.ts  loadingSlice.ts  store.ts  userSlice.tsx  websocketSlice.tsx
